# python-project-83

./: .gitignore  Makefile  README.md  database.sql  db_generate.sh  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py  db.py  db_utils.py  exceptions.py  html.py  my_types.py  validators.py
page_analyzer/templates/: errors.html  index.html  main_layout.html  url.html  urls.html
