[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "project page_analyzer"
authors = ["Dmitriy G. <llogginn@gmail.com>"]
repository = "https://github.com/braimm/python-project-83"
readme = "README.md"
packages = [{ include = "page_analyzer" },]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
